Bug 1762161 - Allow for mbox "From " lines in nsMsgLocalStoreUtils X-Mozilla-* header manipulations. r=mkmelin

Previously, the utility functions in nsMsgLocalStoreUtils.cpp would just let the HeaderReader class deal with "From " lines.
It would handle them by ignoring them as malformed headers. This worked fine, but spat out an ugly warning message.
This patch checks for and skips such "From " lines before attempting to parse the headers.

Differential Revision: https://phabricator.services.mozilla.com/D142777

--HG--
extra : amend_source : 6e2c9b7ecc6678a5c2695508435d5025f0229da4